--- a/client/madLib.html
+++ b/client/madLib.html
@@ -1,7 +1,31 @@
 <body>
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12"><h1 class="text-center">Create Your Mad Lib Below</h1></div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<h1 class="text-center" id="madLib">Create Your Mad Lib Below!</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+				<form class="form-horizontal text-center">
+
+					<div class="form-group">	
+						<label for="exclamation" class="col-xs-2 control-label">Exclamation:</label>
+						<div class="col-xs-10">					    
+				     <input type="text" class="form-control" id="exclamation">			     
+				     
+				     	</div>
+				     </div>
+
+				     <div  class="form-group">
+				     	<div class="class-xs-offset-2 col-xs-10">
+				     		<button id="submitButton" class="btn btn-default">Generate</button>
+
+				     	</div>
+
+				     </div>
+				</form>
+			</div>
+		</div>
 	</div>
-</div>
 </body>
