added click event

--- a/client/madLib.html
+++ b/client/madLib.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12">
-				<h1 class="text-center" id="madLib">Create Your Mad Lib Below!</h1>
+				<h1 class="text-center margin-top-lg" id="madLib">Create Your Mad Lib Below!</h1>
 			</div>
 		</div>
 		<div class="row">
